--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .navbar {
     max-width: 100%;
-    background-color: #347061;
+    background-color: #4FA1BA;
     padding:14px 20px;
-    border: black solid 2px;
+    border: #FCFAFF 2px;
 }
